--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   "dependencies": {
     "@thirdweb-dev/react": "^3",
     "@thirdweb-dev/sdk": "^3",
+    "@types/react-slick": "^0.23.10",
     "autoprefixer": "^10.4.14",
     "ethers": "^5.6.4",
     "next": "^13",
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
+    "slick-carousel": "^1.8.1",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
